# Looper

./: .gitignore  Makefile  README.md  pyproject.toml
looper/: CMakeLists.txt
looper/bindings/: __init__.py
looper/cpp_modules/: CMakeLists.txt
looper/cpp_modules/expression/: CMakeLists.txt  expression.cpp  py_expression.cpp
looper/cpp_modules/graphs/: CMakeLists.txt  directed_labeled_graph.cpp  labeled_transition_system.cpp  py_directed_labeled_graph.cpp
looper/cpp_modules/include/expression/: expression.hpp
looper/cpp_modules/include/graphs/: directed_labeled_graph.hpp  labeled_transition_system.hpp
looper/cpp_modules/include/lts_constructor/: cfg_utils.hpp  exceptions.hpp  instruction_interpreter.hpp  lts_constructor.hpp
looper/cpp_modules/lts_constructor/: CMakeLists.txt  cfg_utils.cpp  instruction_interpreter.cpp  lts_constructor.cpp  py_lts_constructor.cpp
looper/looper/: __init__.py  run_analysis.py
looper/tests/: CMakeLists.txt  pytest.ini
looper/tests/graphs/: CMakeLists.txt
looper/tests/graphs/binding_tests/: directed_labeld_graph_test.py  labeled_transition_system_test.py
looper/tests/graphs/dot_tests/: CMakeLists.txt  directed_labeled_graph.cpp  labeled_transition_system.cpp  runner.cpp
looper/tests/graphs/unit_tests/: CMakeLists.txt  directed_labeled_graph.cpp  labeled_transition_system.cpp
tests/: del.c  names.c
utils/: Makefile
